fix z-index on home screen & adds to death pop up

--- a/styles/main.css
+++ b/styles/main.css
@@ -196,6 +196,7 @@ h1 {
     height: 100%;
     /* padding: 30px 0 0 50px; */
     box-sizing: border-box;
+    z-index: -2;
 
 }
 
